Add examples of streams